--- a/index.html
+++ b/index.html
@@ -5,24 +5,30 @@ Collaborators: nobody
 -->
 <!DOCTYPE html>
 <html>
-<!--
+	<!--
 /* Copyright (c) 2017 MIT 6.813/6.831 course staff, all rights reserved.
  * Redistribution of original or derived work requires permission of course staff.
  */
 -->
 
 	<head>
-		<meta charset="utf-8">
+		<meta charset="utf-8" />
 		<title>Candy Crush</title>
-		
+
 		<!-- Load style sheets -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.css">
-		
-		<link rel="stylesheet" href="mainLayout.css">
-		
+		<link
+			rel="stylesheet"
+			href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.css"
+		/>
+
+		<link rel="stylesheet" href="mainLayout.css" />
+
 		<!-- Use mobile-aware viewport -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, shrink-to-fit=no"
+		/>
+
 		<!-- Load any supplemental Javascript libraries here -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/2.4.2/seedrandom.js"></script>
@@ -30,6 +36,15 @@ Collaborators: nobody
 		<script src="board.js"></script>
 		<script src="rules.js"></script>
 		<script src="handler.js"></script>
+		<style>
+			body {
+				background-color: black;
+				color: white;
+			}
+			.container {
+				width: 100%;
+			}
+		</style>
 	</head>
 
 	<body>
@@ -37,15 +52,25 @@ Collaborators: nobody
 			<div class="row">
 				<div class="col-md-3" id="firstColumn">
 					<h1 id="gameTitle">Candy Crush</h1>
-					<label id="scoreLabel">0 points</label><br/>
-					<input class="btn btn-default" type="button" id="newGame" value="New Game"><br/>
-					<input class="btn btn-default" type="button" id="showMove" value="Show Move">
+					<label id="scoreLabel">0 points</label><br />
+					<input
+						class="btn btn-default"
+						type="button"
+						id="newGame"
+						value="New Game"
+					/><br />
+					<input
+						class="btn btn-default"
+						type="button"
+						id="showMove"
+						value="Show Move"
+					/>
 				</div>
-				
+
 				<div class="col-md-6" id="mainColumn">
-					<div id="cover"></div>
-					<div id="gameBoard"></div>
-					<canvas id="canvas" width="320" height="320">
+					<div id="cover" width="100%"></div>
+					<div id="gameBoard" width="80%"></div>
+					<canvas id="canvas">
 						<p>Canvas not supported on your browser.</p>
 					</canvas>
 				</div>
@@ -81,10 +106,9 @@ Collaborators: nobody
 					</div>
 				</div>
 				-->
-				
-			</div> <!-- class="row" -->
-		</div> <!-- class="container" -->
-	
+			</div>
+			<!-- class="row" -->
+		</div>
+		<!-- class="container" -->
 	</body>
-
 </html>
