--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Collaborators: nobody
 
 	<head>
 		<meta charset="utf-8" />
-		<title>Candy Crush</title>
+		<title>CrushNik</title>
 
 		<!-- Load style sheets -->
 		<link
@@ -51,7 +51,7 @@ Collaborators: nobody
 		<div class="container">
 			<div class="row">
 				<div class="col-md-3" id="firstColumn">
-					<h1 id="gameTitle">Candy Crush</h1>
+					<h1 id="gameTitle">CrushNik</h1>
 					<label id="scoreLabel">0 points</label><br />
 					<input
 						class="btn btn-default"
